<resources>
    <string-array name="array_movies_sort_by">
        <item>popularity</item>
        <item>release date</item>
        <item>revenue</item>
        <item>average vote</item>
        <item>number of votes</item>
    </string-array>
    <string-array name="array_shows_sort_by">
        <item>popularity</item>
        <item>first air date</item>
        <item>average vote</item>
    </string-array>
    <string-array name="array_view_results">
        <item>top to bottom</item>
        <item>bottom to top</item>
    </string-array>
    <string name="app_name">Movie Night</string>
    <string name="error_title">Error!</string>
    <string name="error_message">Some error has occured! Please try again!</string>
    <string name="ok_button">OK</string>
    <string name="error_dialog">error_dialog</string>
    <string name="network_error">Network error!</string>
    <string name="network_error_message">No network is available. Please check your internet connection</string>
    <string name="no_internet_tag">no internet error</string>
    <string name="find_your_movie">Find YOUR movie</string>
    <string name="movie_night">MOVIE NIGHT</string>
    <string name="submit_button">SEARCH</string>
    <string name="search">Search YOUR movies:</string>
    <string name="movies_checkbox">Movies</string>
    <string name="tv_shows_checkbox">TV shows</string>
    <string name= "genres_to_search">Genres:</string>
    <string name="tv_show_genres">Shows genres:</string>
    <string name="rating_and_release_dates">Rating and Release dates</string>
    <string name="movie_rating">Minimum rating:</string>
    <string name="number_of_votes">Number of votes:</string>
    <string name="release_dates">Released:</string>
    <string name="dash">-</string>
    <string name="sort">Sort</string>
    <string name="sort_by">Sort by:</string>
    <string name="view_results">View results:</string>
    <string name="all_genres">All genres</string>
    <string name="dots">...</string>
    <string name="ok">OK</string>
    <string name="action">Action</string>
    <string name="empty_genres_list">Some error has occured. Please check internet connection and try again.</string>
    <string name="select_all">SELECT ALL</string>
    <string name="select_movie_genres">Select movie genres:</string>
    <string name="select_show_genres">Select TV Shows genres:</string>
    <string name="transformers">Transformers (2012)</string>
    <string name="_2012">2012</string>
    <string name="_10">10.0</string>
    <string name="genres">Genres: Action, Fiction</string>
    <string name="movies">MOVIES</string>
    <string name="tv_shows">TV SHOWS</string>
    <string name="sort_results">Sort Results</string>
    <string name="movies_sort">Movies:</string>
    <string name="tv_shows_sort">TV Shows:</string>
    <string name="attribution">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
    <string name="more_movies">MORE MOVIES</string>
    <string name="no_movies_found">No movies have been found. Please change your request and try again.</string>
    <string name="select_genres">Select genres</string>
    <string name="message_try_again">Please select movie genres and try again.</string>
    <string name="select">select_genres</string>
</resources>
