<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#01d277">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="100">

        <TextView
            tools:text="@string/_2012"
            android:layout_width="0dp"
            android:layout_weight="15"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:id="@+id/yearTextView" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="70"
            android:layout_height="wrap_content">

            <TextView
                tools:text="@string/transformers"
                android:layout_width="match_parent"
                android:layout_weight="70"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:id="@+id/titleTextView"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                tools:text="@string/genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/genreTextView"
                android:layout_marginLeft="10dp"
                android:gravity="left"
                android:layout_weight="70" />
        </LinearLayout>

        <TextView
            tools:text="@string/_10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:background="@drawable/circle"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/ratingTextView"
            android:layout_marginRight="10dp"
            />


    </LinearLayout>

</RelativeLayout>