<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="20dp"
    android:paddingLeft="30dp"
    android:paddingTop="10dp"
    android:paddingBottom="20dp"
    tools:context="com.alexapps.movienight.ui.MainActivity"
    android:background="#01d277">

    <Button
        android:text="@string/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submitButton"
        android:textSize="20sp"
        android:background="#40ffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/typeInfoTextView"
            android:textSize="23sp"
            android:textColor="#ffffff"
            android:textStyle="normal|bold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="100">

            <TextView
                android:text="@string/genres_to_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/genres1InfoTextView"
                android:textSize="16sp"
                android:textColor="#ccffffff"
                android:layout_weight="25"/>

            <TextView
                tools:text="@string/all_genres"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:id="@+id/selectedMovieGenresTextView"
                android:textSize="16sp"
                android:textColor="#ccffffff"
                android:layout_weight="60"/>

            <Button
                android:text="@string/dots"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/selectMovieGenresButton"
                android:layout_weight="15"
                android:textSize="12sp"
                android:textColor="#ffffffff"
                android:background="@color/colorPrimary" />


        </LinearLayout>

        <TextView
            android:text="@string/rating_and_release_dates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ratingHeaderTextView"
            android:paddingTop="20dp"
            android:textSize="23sp"
            android:textColor="#ffffff"
            android:textStyle="normal|bold" />

       <LinearLayout
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100">

            <TextView
                android:text="@string/movie_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/ratingInfoTextView"
                android:textSize="16sp"
                android:textColor="#ccffffff"
                android:layout_weight="45"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/ratingEditText"
                android:layout_weight="15"
                android:hint="7.0"
                android:textSize="16sp"
                android:background="@android:color/white"
                android:textColor="#01d277"
                android:textColorHint="@android:color/darker_gray"
                android:textAlignment="center"
                android:maxLength="4"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:weightSum="100">

            <TextView
                android:text="@string/number_of_votes"
                android:layout_width="0dp"
                android:paddingTop="10dp"
                android:layout_height="wrap_content"
                android:id="@+id/votesInfotextView"
                android:textSize="16sp"
                android:textColor="#ccffffff"
                android:layout_weight="45"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:ems="10"
                android:id="@+id/votesEditText"
                android:layout_weight="35"
                android:hint="10"
                android:textSize="16sp"
                android:background="@android:color/white"
                android:textColor="#01d277"
                android:textColorHint="@android:color/darker_gray"
                android:textAlignment="center"
                android:maxLength="8"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:weightSum="100"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/release_dates"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/releaseDatesInfoTextView"
                android:textSize="16sp"
                android:textColor="#ccffffff"
                android:layout_weight="30"/>

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/yearFromSpinner"
                android:layout_weight="35"/>


            <TextView
                android:text="@string/dash"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/dashTextView"
                android:layout_weight="5"
                android:textSize="25sp"
                android:textColor="@android:color/white"
                android:textAlignment="center"/>

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/yearToSpinner"
                android:layout_weight="35"/>

        </LinearLayout>

        <TextView
            android:text="@string/sort_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sortHeaderTextView"
            android:paddingTop="20dp"
            android:textSize="23sp"
            android:textColor="#ffffff"
            android:textStyle="normal|bold" />

        <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:weightSum="100">

            <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/moviesSortOrderSpinner"
            android:layout_weight="60"/>
        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/moviesAscDescSpinner"
            android:layout_weight="40"/>

        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:weightSum="100"
        >

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:srcCompat="@drawable/tmdb_logo"
            android:id="@+id/tmdbImageView"
            android:layout_weight="10"/>

        <TextView
            android:text="@string/attribution"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:id="@+id/attTextView"
            android:layout_weight="90"
            android:gravity="center_vertical"/>
    </LinearLayout>
</LinearLayout>

</RelativeLayout>
