<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_genre"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#01d277"
    tools:context="com.alexapps.movienight.ui.GenreActivity">

    <TextView
        android:text="@string/select_movie_genres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/selectGenresInfoTextView"
        android:textSize="23sp"
        android:textColor="#ffffff"
        android:textStyle="normal|bold"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <CheckBox
        android:text="@string/select_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/selectGenresInfoTextView"
        android:id="@+id/selectAllCheckBox"
        android:checked="false"
        android:textSize="18sp"
        android:textColor="#ccffffff"

        />

    <Button
        android:text="@string/ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submitButton"
        android:textSize="20sp"
        android:background="#40ffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <ListView
        android:id="@+id/genreList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selectAllCheckBox"
        android:layout_above="@id/submitButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:text="@string/empty_genres_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emptyListTextView"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:lineSpacingMultiplier="1.5"
        android:gravity="center"/>

</RelativeLayout>
